--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -578,6 +578,11 @@ section {
     background: #e30000;
 }
 
+.rate-wrapper .item img {
+    width: 35px;
+    margin-top: 5px;
+}
+
 .rate-wrapper .link {
     height: 50px;
     width: 50px;
@@ -746,4 +751,21 @@ section {
         margin-bottom: 10px;
         margin-right: auto!important;
     }
+}
+
+.thumb-spot__rating__wrapper {
+    float: right;
+    text-align: center;
+    margin-left: 8px;
+}
+
+.thumb-spot__rating__wrapper img {
+    width: 30px;
+    margin-top: 5px;
+}
+
+.thumb-spot__rating__wrapper .thumb-spot__rating {
+    float: none;
+    display: block;
+    margin: 0;
 }
