--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -749,12 +749,13 @@ section {
     }
     .range-wrapper-inner {
         display: block;
+        width: 100%;
     }
     .range-wrapper-inner .btn__vote {
-        width: 70%;
+        width: 292px;
         margin-left: auto!important;
         display: block;
-        height: 40px;
+        height: 44px;
         line-height: 30px!important;
         margin-right: auto!important;
         background-image: url(../images/rate-button-mobile.png);
@@ -765,6 +766,8 @@ section {
     }
     .range-inner {
         padding-left: 10px;
+        display: flex;
+        justify-content: space-between;
     }
     .rating-item {
         margin: 4px 0px 4px 0px;
